--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "17.0.37",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "git-commit-msg-linter": "^3.2.8",
     "typescript": "4.5.4"
   }
 }
