--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.4",
+    "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.4",
     "formik": "^2.2.9",
     "graphql": "^16.2.0",
