--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "git-commit-msg-linter": "^3.2.8",
