--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.2.4",
     "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.4",
+    "apollo-upload-client": "^17.0.0",
     "formik": "^2.2.9",
     "graphql": "^16.2.0",
     "next": "12.0.7",
@@ -23,6 +24,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/apollo-upload-client": "^14.1.0",
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
     "babel-plugin-import": "^1.13.3",
