--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sweetalert2": "^11.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
